k8s/plumtalks-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plumtalks-frontend
  namespace: plumtalks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plumtalks-frontend
  template:
    metadata:
      labels:
        app: plumtalks-frontend
    spec:
      containers:
      - name: plumtalks-frontend
        image: viktorvasilev42/plumtalks-frontend:1.0
        ports:
        - containerPort: 3000
