k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plumtalks-frontend
  namespace: plumtalks
spec:
  selector:
    app: plumtalks-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
