k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: plumtalks
spec:
  selector:
    app: mysqldb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
